<resources>
    <string name="app_name">산행록</string>
    <string name="user_name">김산이</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_tips_3c">✅ 1단계 : 위급상황을 인식하고 어떻게 행동할지를 결정하는 것(Check)\n✅ 2단계 : 도움을 요청하는 것(Call)\n✅ 3단계 : 응급의료기관에 인계할 때까지 적절한 처치를 하는 것(Care)</string>
    <string name="information_rescue">✅ 응급 상황이 발생한 정확한 장소\n✅ 무슨 일이 일어났는지\n✅ 부상자의 상태 정도\n✅ 전화 거는 사람의 이름, 연락처\n✅ 얼마나 많은 사람이 다쳤는지\n✅ 응급처치는 어떻게 하고 있는지</string>
    <string name="first_aid">✅ <b>가슴통증, 호흡곤란 등의 급성질환이 발생했을 때:</b> 등산을 하다가 극심한 가슴통증이 발생했다면 심장혈관, 즉 관상동맥의 이상을 의심해 볼 수 있다. 특히, 가슴이 터질 듯 하거나 짓누르는 듯한 통증을 느낀다면 협심증이나 심근경색일 때 발생하는 현상일 수 있으므로 즉시 편안한 자세로 휴식을 취해야 하며 119에 도움을 요청하도록 한다. 심혈관계 관련 기저질환이 있는 사람은 무리한 등산을 피해야 하며 처방받은 혈관확장제를 미리 준비하여 가슴통증, 호흡곤란 등의 증상이 나타났을 때 복용하는 것이 좋다. 호흡곤란 증세가 나타났을 때에는 등산을 중단하고 안정을 취해야 하며 호흡을 깊게 천천히 하도록 하고 증상이 좋아지지 않으면 즉시 도움을 요청해야 한다.
    \n✅ <b>고혈압 등 기저질환 있는 환자 등산 시 주의 사항:</b> 평소 고혈압이 있는 사람이 무리한 등산을 하게 되면 혈압 상승의 원인이 될 수 있으며, 이는 뇌출혈 등 위험한 상황으로 이어질 수 있으므로 각별히 주의해야 한다. 기저질환이 있는 사람의 경우, 무리한 등산은 피하도록 한다.
    \n✅ <b>염좌 또는 골절:</b> 넘어지거나 외상을 입었을 경우에는 먼저 손상 부위를 차갑에 유지하고 부종 방지를 위해 심장보다 높게 위치시키도록 한다. 골절 부위에 출혈이 있으면 직접 압박으로 지혈을 하고 부목을 대도록 한다. 뼈가 외부로 노출된 개방성 골절 부상을 입었다면 뼈를 억지로 안으로 밀어 넣으려 하지 말고 노출된 부위를 통해 감염이 생길 우려가 있으므로 환부를 깨끗한 수건으로 덮고 빨리 병원으로 이송해야 한다.
    \n✅ <b>머리손상:</b> 등산 중 머리를 다쳤을 때 환자가 의식을 잃거나 극심한 두통을 호소하는 경우 주변의 도움 또는 119에 신고한다.
    \n✅ <b>뱀에 물렸을 때:</b> 몸을 눕혀 안정시킨 뒤 주변을 조용하게 한 후 움직이지 않게 하고, 손상 부위 5~10cm 위쪽을 묶어(주의, 강하게 묶지 않도록 한다) 심장 높이보다 아래에 위치하도록 해주어 독이 퍼지지 않게 한다. 뱀에게 물린 경우 뱀의 모양을 잘 살펴야 한다. 동물에게 물린 상처는 여러 가지 감염증의 원인이 되므로 119에 신고 후 구급대원이 도착할 때까지 응급처치 하며 환자를 안정시킨다.
    \n✅ <b>절지동물(곤충류, 거미류 등)에 의한 물림과 찔림의 경우:</b> 산행 중 꿀벌에게 쏘이는 경우, 억지로 독침을 빼려 하지 말고 쏘인 부위에 벌침이 보인다면 신용카드 같은 얇은 도구를 이용하여 살살 긁어 주면 곧 벌침이 빠진다. 이 후 환부를 절대로 문지르지 말아야 하며, 전신반응(호흡곤란, 청색증, 의식변화 등)이 있는 경우, 알레르기 반응이므로 빠르게 119에 신고하도록 한다.
    \n✅ <b>열상:</b> 열상이 있을 때에는 열상의 정확한 부위를 확인한 후 거즈 또는 깨끗한 수건으로 환부를 덮고 손으로 눌러주면 지혈이 된다. 열상은 대부분 상처를 봉합해야만 하기 때문에 가능한 빠른 시간 안에 응급실을 내원하여야 한다.
    \n✅ <b>저체온증:</b> 저체온증은 열 발생이 많거나, 저온환경에 지속적으로 노출되어 심부 체온이 저하된 경우이고, 보통 체온이 35℃ 이하로 내려간 상태를 말한다. 만약 체온이 저하되었다면 젖은 의복 제거 및 마른 옷가지로 환자를 감싸고 저온환경에서 환자를 이동시켜 저온 노출로부터 환자를 보호한다.
    \n✅ <b>찰과상:</b> 등산 시에는 날카로운 나뭇가지나 등산장비 등에 피부를 긁히거나 베이는 경우도 자주 발생한다. 만약 피가 멈추지 않거나 출혈이 심각 할 때는 환부를 심장보다 높은 곳으로 들어 올리고 피가 나는 부위는 깨끗한 수건 등으로 직접 압박을 통해 지혈하도록 한다.
    \n✅ <b>c탈진:</b> 탈진을 방지하기 위해서는 사전에 수분을 충분히 섭취하는 것이 중요하다. 등산을 하면서 물을 조금씩 자주 마시고 쉬는 동안에도 수분과 음식을 조금씩 자주 섭취하도록 하며, 알코올은 피하는 것이 바람직하다.
    </string>
    <string name="climbing_mountain">✅ 산행은 아침 일찍 시작하여 해지기 한두 시간 전에 마친다.
    \n✅ 하루 8시간을 산행하고, 체력의 30%는 비축한다.
    \n✅ 일행 중 약한 사람을 기준으로 산행한다.
    \n✅ 될 수 있으면 30킬로그램 이상의 짐을 지지 않는다.
    \n✅ 배낭에는 기상이변 등을 대비 랜턴, 우의, 휴대전화(예비 축전지), 상비약품을 준비하고 손에는 될 수 있으면 물건을 들지 않는다.
    \n✅ 등산화는 발에 잘 맞고 통기성과 방수성이 좋은 것을 신는다.
    \n✅ 산행 중에는 한꺼번에 너무 많이 먹지 말고, 조금씩 자주 섭취한다.
    \n✅ 산에서는 아는 길도 자주 지도를 보고 확인한다.
    \n✅ 길을 잘못 들었을 때는 당황하지 말고, 아는 위치까지 되돌아가서 다시 확인한다.
    \n✅ 등반로 외의 산행을 삼가고, 길을 잃었을 때에는 계곡을 피하여 능선으로 올라간다.
    \n✅ 등산화 바닥 전체로 지면을 밟고 안전하게 걷는다.
    \n✅ 보폭을 너무 넓게 하지 말고 항상 일정한 속도로 걷는다.
    \n✅ 발 디딜 곳을 잘 살펴 천천히 걷는다.
    \n✅ 처음 몇 차례는 15~20분 정도 걷고 5분간 휴식하고, 차츰 30분 정도 걷고 5~10분간 휴식한 다음 산행에 적응이 되면 1시간 정도 걷고 10분간씩 휴식하는 것이 좋다.
    \n✅ 산행 시에는 수시로 지형과 지도를 대조하여 현재 위치를 소방서에서 설치한 위치판 고유번호와 함께 확인하는 것이 좋다.
    \n✅ 내려갈 때는 자세를 낮추고 발아래를 잘 살펴 안전하게 디딘다.
    \n✅ 썩은 나뭇가지 풀, 불안정한 바위를 손잡이로 사용하지 않는다.
    \n✅ 급경사 등 위험한 곳에서는 보조 자일을 사용하는 것이 좋다.
    </string>
    <string name="camping_mountain">✅ 야생동물이나 곤충으로부터 피해를 보지 않도록 주의하고, 뱀 등이 나타나면 절대로 공격을 하면 안 된다.
    \n✅ 계곡에서 캠핑할 때는, 밤사이 집중호우가 내려 물이 갑자기 불어나면서 위험해질 수 있으므로 물 가까이 텐트를 치지 않는다.
    \n✅ 물을 쉽게 구할 수 있고 바닥이 평평해야 하며, 뒤에 암벽이나 언덕이 없어 산사태 위험이 없는 곳에 텐트를 친다.
    \n✅ 벌레에 물리면 비눗물로 즉시 씻고, 항히스타민제 연고를 바른다.
    \n✅ 휴대용 랜턴, 라디오, 밧줄(로프), 구급약품 등을 준비해둔다.
    \n✅ 호우주의보 발령 시 라디오에 귀를 기울여 기상상태를 주시한다.
    \n✅ 등산 중일 때에는 빨리 하산하거나 급히 높은 지대로 피신하되, 물살이 거센 계곡을 절대로 건너지 않는다.
    \n✅ 야영 중에 물이 밀려들 때에는 절대로 물건에 미련을 두지 말고 신속히 대피한다.
    \n✅ 집중호우 시 나무로 만들어진 다리(교량)는 건너지 않는다.
    </string>
    <string name="terms_privacy">
<b>제1조(목적)</b>\n피톤치드(이하 \'회사\'라고 함)는 회사가 제공하고자 하는 서비스(이하 \‘회사 서비스\')를 이용하는 개인(이하 \‘이용자\’ 또는 \‘개인\’)의 정보(이하 \‘개인정보\’)를 보호하기 위해, 개인정보보호법, 정보통신망 이
용촉진 및 정보보호 등에 관한 법률(이하 \'정보통신망법\') 등 관련 법령을 준수하고, 서비스 이용자의 개
인정보 보호 관련한 고충을 신속하고 원활하게 처리할 수 있도록 하기 위하여 다음과 같이 개인정보처
리방침(이하 \'본 방침\’)을 수립합니다.\n
<b>제2조(개인정보 처리의 원칙)</b>\n개인정보 관련 법령 및 본 방침에 따라 회사는 이용자의 개인정보를 수집할 수 있으며 수집된 개인정보는 개인의 동의가 있는 경우에 한해 제3자에게 제공될 수 있습니다. 단, 법령의 규정 등에 의해 적법하
게 강제되는 경우 회사는 수집한 이용자의 개인정보를 사전에 개인의 동의 없이 제3자에게 제공할 수도 있습니다.\n
<b>제3조 (본 방침의 공개)</b>\n1. 회사는 이용자가 언제든지 쉽게 본 방침을 확인할 수 있도록 회사 홈페이지 첫 화면 또는 첫 화면과의 연결화면을 통해 본 방침을 공개하고 있습니다. \n2. 회사는 제1항에 따라 본 방침을 공개하는 경우 글자 크기, 색상 등을 활용하여 이용자가 본 방침을 쉽게 확인할 수 있도록 합니다.\n
<b>제4조 (본 방침의 변경)</b>\n1. 본 방침은 개인정보 관련 법령, 지침, 고시 또는 정부나 회사 서비스의 정책이나 내용의 변경에 따라 개정될 수 있습니다.\n2. 회사는 제1항에 따라 본 방침을 개정하는 경우 다음 각 호 하나 이상의 방법으로 공지합니다.\n가. 회사가 운영하는 인터넷 홈페이지의 첫 화면의 공지사항란 또는 별도의 창을 통하여 공지하는 방법\n나. 서면·모사전송·전자우편 또는 이와 비슷한 방법으로 이용자에게 공지하는 방법\n3. 회사는 제2항의 공지는 본 방침 개정의 시행일로부터 최소 7일 이전에 공지합니다. 다만, 이용자 권리의중요한 변경이 있을 경우에는 최소 30일 전에 공지합니다.\n
<b>제5조(회원가입을 위한 정보)</b>\n회사는 이용자의 회사 서비스에 대한 회원가입을 위하여 다음과 같은 정보를 수집합니다.\n1. 필수 수집 정보: 이메일 주소, 비밀번호, 이름 및 닉네임\n
<b>제6조(개인정보 수집 방법)</b>\n회사는 다음과 같은 방법으로 이용자의 개인정보를 수집합니다.\n1. 이용자가 회사의 홈페이지에 자신의 개인정보를 입력하는 방식\n2. 어플리케이션 등 회사가 제공하는 홈페이지 외의 서비스를 통해 이용자가 자신의 개인정보를 입력하는 방식\n3. 이용자가 고객센터의 상담, 게시판에서의 활동 등 회사의 서비스를 이용하는 과정에서 이용자가 입력하는 방식\n
<b>제7조(개인정보의 이용)</b>\n회사는 개인정보를 다음 각 호의 경우에 이용합니다.\n1. 공지사항의 전달 등 회사운영에 필요한 경우\n2. 이용문의에 대한 회신, 불만의 처리 등 이용자에 대한 서비스 개선을 위한 경우\n3. 회사의 서비스를 제공하기 위한 경우\n4. 법령 및 회사 약관을 위반하는 회원에 대한 이용 제한 조치, 부정 이용 행위를 포함하여 서비스의 원활한 운영에 지장을 주는 행위에 대한 방지 및 제재를 위한 경우\n
<b>제8조(개인정보의 보유 및 이용기간)</b>\n1. 회사는 이용자의 개인정보에 대해 개인정보의 수집·이용 목적 달성을 위한 기간 동안 개인정보를 보유 및 이용합니다.\n2. 전항에도 불구하고 회사는 내부 방침에 의해 서비스 부정이용기록은 부정 가입 및 이용 방지를 위하여 회원 탈퇴 시점으로부터 최대 1년간 보관합니다.\n
<b>제9조(법령에 따른 개인정보의 보유 및 이용기간)</b>\n회사는 관계법령에 따라 다음과 같이 개인정보를 보유 및 이용합니다.\n1. 전자상거래 등에서의 소비자보호에 관한 법률에 따른 보유정보 및 보유기간\n가. 계약 또는 청약철회 등에 관한 기록 : 5년\n나. 대금결제 및 재화 등의 공급에 관한 기록 : 5년\n다. 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년\n
라. 표시·광고에 관한 기록 : 6개월\n2. 통신비밀보호법에 따른 보유정보 및 보유기간\n가. 웹사이트 로그 기록 자료 : 3개월\n3. 전자금융거래법에 따른 보유정보 및 보유기간\n가. 전자금융거래에 관한 기록 : 5년\n4. 위치정보의 보호 및 이용 등에 관한 법률\n가. 개인위치정보에 관한 기록 : 6개월\n
<b>제10조(개인정보의 파기원칙))</b>\n회사는 원칙적으로 이용자의 개인정보 처리 목적의 달성, 보유·이용기간의 경과 등 개인정보가 필요하지 않을 경우에는 해당 정보를 지체 없이 파기합니다.)\n
<b>제11조(개인정보파기절차)</b>\n1. 이용자가 회원가입 등을 위해 입력한 정보는 개인정보 처리 목적이 달성된 후 별도의 DB로 옮겨져(종이의 경우 별도의 서류함) 내부 방침 및 기타 관련 법령에 의한 정보보호 사유에 따라(보유 및 이용기간 참조) 일정 기간 저장된 후 파기되어집니다.\n2. 회사는 파기 사유가 발생한 개인정보를 개인정보보호 책임자의 승인절차를 거쳐 파기합니다.\n
<b>제12조(개인정보파기방법)</b>\n회사는 전자적 파일형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제하며, 종이로 출력된 개인정보는 분쇄기로 분쇄하거나 소각 등을 통하여 파기합니다.\n
<b>제13조(광고성 정보의 전송 조치)</b>\n1. 회사는 전자적 전송매체를 이용하여 영리목적의 광고성 정보를 전송하는 경우 이용자의 명시적인 사전동의를 받습니다. 다만, 다음 각호 어느 하나에 해당하는 경우에는 사전 동의를 받지 않습니다.\n가. 회사가 재화 등의 거래관계를 통하여 수신자로부터 직접 연락처를 수집한 경우, 거래가 종료된 날로 부터 6개월 이내에 회사가 처리하고 수신자와 거래한 것과 동종의 재화 등에 대한 영리목적의 광고성 정보를 전송하려는 경우\n나. 「방문판매 등에 관한 법률」에 따른 전화권유판매자가 육성으로 수신자에게 개인정보의 수집출처를 고지하고 전화권유를 하는 경우\n2. 회사는 전항에도 불구하고 수신자가 수신거부의사를 표시하거나 사전 동의를 철회한 경우에는 영리목적
의 광고성 정보를 전송하지 않으며 수신거부 및 수신동의 철회에 대한 처리 결과를 알립니다.\n3. 회사는 오후 9시부터 그다음 날 오전 8시까지의 시간에 전자적 전송매체를 이용하여 영리목적의 광고성정보를 전송하는 경우에는 제1항에도 불구하고 그 수신자로부터 별도의 사전 동의를 받습니다.\n4. 회사는 전자적 전송매체를 이용하여 영리목적의 광고성 정보를 전송하는 경우 다음의 사항 등을 광고성 정보에 구체적으로 밝힙니다.\n가. 회사명 및 연락처\n나.수신 거부 또는 수신 동의의 철회 의사표시에 관한 사항의 표시\n5. 회사는 전자적 전송매체를 이용하여 영리목적의 광고성 정보를 전송하는 경우 다음 각 호의 어느 하나에 해당하는 조치를 하지 않습니다.\n가. 광고성 정보 수신자의 수신거부 또는 수신동의의 철회를 회피· 방해하는 조치\n나.숫자·부호 또는 문자를 조합하여 전화번호·전자우편주소 등 수신자의 연락처를 자동으로 만들어 내는 조치\n다. 영리목적의 광고성 정보를 전송할 목적으로 전화번호 또는 전자우편주소를 자동으로 등록하는 조치\n라. 광고성 정보 전송자의 신원이나 광고 전송 출처를 감추기 위한 각종 조치\n마.영리목적의 광고성 정보를 전송할 목적으로 수신자를 기망하여 회신을 유도하는 각종 조치\n
<b>제14조(아동의 개인정보보호)</b>\n1. 회사는 만 14세 미만 아동의 개인정보 보호를 위하여 만 14세 이상의 이용자에 한하여 회원가입을 허용합니다.\n2. 제1항에도 불구하고 회사는 이용자가 만 14세 미만의 아동일 경우에는, 그 아동의 법정대리인으로부터 그 아동의 개인정보 수집, 이용, 제공 등의 동의를 그 아동의 법정대리인으로부터 받습니다.\n3. 제2항의 경우 회사는 그 법정대리인의 이름, 생년월일, 성별, 중복가입확인정보(ID), 휴대폰 번호 등을 추가로 수집합니다.\n
<b>제15조(개인정보 조회 및 수집동의 철회)</b>\n1. 이용자 및 법정 대리인은 언제든지 등록되어 있는 자신의 개인정보를 조회하거나 수정할 수 있으며 개인정보수집 동의 철회를 요청할 수 있습니다.\n2. 이용자 및 법정 대리인은 자신의 가입정보 수집 등에 대한 동의를 철회하기 위해서는 개인정보보호책임자 또는 담당자에게 서면, 전화 또는 전자우편주소로 연락하시면 회사는 지체 없이 조치하겠습니다.\n
<b>제16조(개인정보 정보변경 등)</b>\n1. 이용자는 회사에게 전조의 방법을 통해 개인정보의 오류에 대한 정정을 요청할 수 있습니다.\n2. 회사는 전항의 경우에 개인정보의 정정을 완료하기 전까지 개인정보를 이용 또는 제공하지 않으며 잘못된
개인정보를 제3자에게 이미 제공한 경우에는 정정 처리결과를 제3자에게 지체 없이 통지하여 정정이 이 루어지도록 하겠습니다.\n
<b>제17조(이용자의 의무)</b>\n1. 이용자는 자신의 개인정보를 최신의 상태로 유지해야 하며, 이용자의 부정확한 정보 입력으로 발생하는문제의 책임은 이용자 자신에게 있습니다.\n2. 타인의 개인정보를 도용한 회원가입의 경우 이용자 자격을 상실하거나 관련 개인정보보호 법령에 의해 처벌받을 수 있습니다.\n3. 이용자는 전자우편주소, 비밀번호 등에 대한 보안을 유지할 책임이 있으며 제3자에게 이를 양도하거나 대여할 수 없습니다.\n
<b>제18조(개인정보 유출 등에 대한 조치)</b>\n회사는 개인정보의 분실·도난·유출(이하 \"유출 등\"이라 한다) 사실을 안 때에는 지체 없이 다음 각 호의 모든 사항을 해당 이용자에게 알리고 방송통신위원회 또는 한국인터넷진흥원에 신고합니다.\n1. 유출 등이 된 개인정보 항목\n2. 유출 등이 발생한 시점\n3. 이용자가 취할 수 있는 조치\n4. 정보통신서비스 제공자 등의 대응 조치\n5. 이용자가 상담 등을 접수할 수 있는 부서 및 연락처\n
제19조(개인정보 유출 등에 대한 조치의 예외)
회사는 전조에도 불구하고 이용자의 연락처를 알 수 없는 등 정당한 사유가 있는 경우에는 회사의 홈페
이지에 30일 이상 게시하는 방법으로 전조의 통지를 갈음하는 조치를 취할 수 있습니다.
<b>제20조(국외 이전 개인정보의 보호)</b>\n1. 회사는 이용자의 개인정보에 관하여 개인정보보호법 등 관계 법규를 위반하는 사항을 내용으로 하는 국제 계약을 체결하지 않습니다.\n2. 회사는 이용자의 개인정보를 국외에 제공(조회되는 경우를 포함)·처리위탁·보관(이하 \"이전\"이라 함) 하려면 이용자의 동의를 받습니다. 다만, 본조 제3항 각 호의 사항 모두를 개인정보보호법 등 관계 법규에 따라 공개하거나 전자우편 등 대통령령으로 정하는 방법에 따라 이용자에게 알린 경우에는 개인정보 처리 위탁·보관에 따른 동의절차를 거치지 아니할 수 있습니다.\n3. 회사는 본조 제2항 본문에 따른 동의를 받으려면 미리 다음 각 호의 사항 모두를 이용자에게 고지합니다.\n가. 이전되는 개인정보 항목\n나.개인정보가 이전되는 국가, 이전일시 및 이전방법\n다. 개인정보를 이전받는 자의 성명(법인인 경우 그 명칭 및 정보관리 책임자의 연락처를 말한다)\n라. 개인정보를 이전받는 자의 개인정보 이용목적 및 보유ᆞ이용 기간\n4. 회사는 본조 제2항 본문에 따른 동의를 받아 개인정보를 국외로 이전하는 경우 개인정보보호법 대통령령 등 관계법규에서 정하는 바에 따라 보호조치를 합니다.\n
<b>제21조(개인정보 자동 수집 장치의 설치·운영 및 거부에 관한 사항)</b>\n1. 회사는 이용자에게 개별적인 맞춤서비스를 제공하기 위해 이용 정보를 저장하고 수시로 불러오는 개인정 보 자동 수집장치(이하 \'쿠키\')를 사용합니다. 쿠키는 웹사이트를 운영하는데 이용되는 서버(http)가 이용 자의 웹브라우저(PC 및 모바일을 포함)에게 보내는 소량의 정보이며 이용자의 저장공간에 저장되기도 합니다.\n2. 이용자는 쿠키 설치에 대한 선택권을 가지고 있습니다. 따라서 이용자는 웹브라우저에서 옵션을 설정함 으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다.\n3. 다만, 쿠키의 저장을 거부할 경우에는 로그인이 필요한 회사의 일부 서비스는 이용에 어려움이 있을 수 있습니다.\n
<b>제22조(쿠키 설치 허용 지정 방법)</b>\n웹브라우저 옵션 설정을 통해 쿠키 허용, 쿠키 차단 등의 설정을 할 수 있습니다.\n1. Edge : 웹브라우저 우측 상단의 설정 메뉴 > 쿠키 및 사이트 권한 > 쿠키 및 사이트 데이터 관리 및 삭제\n2. Chrome : 웹브라우저 우측 상단의 설정 메뉴 > 개인정보 및 보안 > 쿠키 및 기타 사이트 데이터\n3. Whale : 웹브라우저 우측 상단의 설정 메뉴 > 개인정보 보호 > 쿠키 및 기타 사이트 데이터\n
<b>제23조(회사의 개인정보 보호 책임자 지정)</b>\n1. 회사는 이용자의 개인정보를 보호하고 개인정보와 관련한 불만을 처리하기 위하여 아래와 같이 관련 부서 및 개인정보 보호 책임자를 지정하고 있습니다.\n가.개인정보 보호 책임자\n1) 성명 : 유채민\n2) 직책: Leader\n3) 전화번호: 01032098205\n4) 이메일: pitonchideu8@gmail.com\n
<b>제24조(권익침해에 대한 구제방법)</b>\n1. 정보주체는 개인정보침해로 인한 구제를 받기 위하여 개인정보분쟁조정위원회, 한국인터넷진흥원 개인 정보침해신고센터 등에 분쟁해결이나 상담 등을 신청할 수 있습니다. 이 밖에 기타 개인정보침해의 신고, 상담에 대하여는 아래의 기관에 문의하시기 바랍니다.\n가. 개인정보분쟁조정위원회 : (국번없이) 1833-6972 (www.kopico.go.kr)\n나. 개인정보침해신고센터 : (국번없이) 118 (privacy.kisa.or.kr)\n다. 대검찰청 : (국번없이) 1301 (www.spo.go.kr)\n라. 경찰청 : (국번없이) 182 (ecrm.cyber.go.kr)\n2. 회사는 정보주체의 개인정보자기결정권을 보장하고, 개인정보침해로 인한 상담 및 피해 구제를 위해 노력하고 있으며, 신고나 상담이 필요한 경우 제1항의 담당부서로 연락해주시기 바랍니다.\n3.개인정보 보호법 제35조(개인정보의 열람), 제36조(개인정보의 정정·삭제), 제37조(개인정보의 처리정 지 등)의 규정에 의한 요구에 대하여 공공기관의 장이 행한 처분 또는 부작위로 인하여 권리 또는 이익의 침해를 받은 자는 행정심판법이 정하는 바에 따라 행정심판을 청구할 수 있습니다.\n가. 중앙행정심판위원회 : (국번없이) 110 (www.simpan.go.kr)\n
<b>부칙</b>\n제1조 본 방침은 2024.09.14.부터 시행됩니다.
    </string>
</resources>