<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SafetyGuideActivity">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="30dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="산을 오르는 즐거움은"
                    android:textColor="@color/white"
                    android:fontFamily="@font/nanum_square_round_eb"
                    android:textSize="25dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="안전한 준비와 함께합니다."
                    android:textColor="@color/white"
                    android:fontFamily="@font/nanum_square_round_eb"
                    android:textSize="25dp"
                    android:layout_marginTop="5dp"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/etc_safetyguide"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_background_white"
                android:orientation="vertical"
                android:padding="10dp">

                <!-- 조난 신고 배너 -->
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/button_119_banner"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:id="@+id/safetyGuideBtn"/>

                <!-- 초보자 등산 가이드 -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="⚠️ 위급 상황 시 행동 요령(3C) ⚠️"
                        android:fontFamily="@font/nanum_square_round_eb"
                        android:textSize="18dp"/>
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_background_lightyellow"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/action_tips_3c"
                            android:textColor="@color/black"
                            android:padding="10dp"
                            android:lineSpacingMultiplier="1.5"/>
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="⚠️ 구조 요청 시 꼭 알려야 할 정보 ⚠️"
                        android:fontFamily="@font/nanum_square_round_eb"
                        android:textSize="18dp"/>
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_background_lightyellow"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/information_rescue"
                            android:textColor="@color/black"
                            android:padding="10dp"
                            android:lineSpacingMultiplier="1.5"/>
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="⚠️ 응급 조치 ⚠️"
                        android:fontFamily="@font/nanum_square_round_eb"
                        android:textSize="18dp"/>
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="350dp"
                        android:layout_height="200dp"
                        android:background="@drawable/round_background_lightyellow"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/first_aid"
                            android:textColor="@color/black"
                            android:padding="10dp"
                            android:lineSpacingMultiplier="1.5"/>
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="⚠️ 산에 오를 때 ⚠️"
                        android:fontFamily="@font/nanum_square_round_eb"
                        android:textSize="18dp"/>
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="350dp"
                        android:layout_height="200dp"
                        android:background="@drawable/round_background_lightyellow"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/climbing_mountain"
                            android:textColor="@color/black"
                            android:padding="10dp"
                            android:lineSpacingMultiplier="1.5"/>
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center_horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="⚠️ 산에서 캠핑할 때 ⚠️"
                        android:fontFamily="@font/nanum_square_round_eb"
                        android:textSize="18dp"/>
                    <androidx.core.widget.NestedScrollView
                        android:layout_width="350dp"
                        android:layout_height="200dp"
                        android:background="@drawable/round_background_lightyellow"
                        android:layout_marginTop="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/camping_mountain"
                            android:textColor="@color/black"
                            android:padding="10dp"
                            android:lineSpacingMultiplier="1.5"/>
                    </androidx.core.widget.NestedScrollView>
                </LinearLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="[출처] 국민재난안전포털"
                    android:layout_gravity="end"
                    android:layout_marginTop="20dp"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

